--- a/Week 1 - Code Refactor/Develop/assets/css/style.css
+++ b/Week 1 - Code Refactor/Develop/assets/css/style.css
@@ -114,7 +114,8 @@ p {
     color: #ffffff;
 }
 
-.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
+.benefit-lead h2, .benefit-brand h2, .benefit-cost h2 {
+    font-size: 18.72px;
     margin-bottom: 10px;
     text-align: center;
 }
